# social-media-effect-on-sales-analysis

./: .gitignore  README.md  aggregate.py  correlations.py  data_access.py  data_access_object.py  decompose.py  feature_engineering.py  main.py  pyproject.toml  smoothing.py  social_media_ml.py  twitter_data_imputation.py  utilities.py
data/: social_media_activity_scores.csv
