[tool.poetry]
name = "social-media-effect-on-sales-analysis"
version = "0.1.0"
description = ""
authors = ["Jamie <moore.doubleo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "==1.0.1"
openpyxl = "==3.0.3"
xlrd = "==1.2.0"
jupyterlab = "^1.2.6"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "==5.2.0"
flake8 = "==3.7.0"

[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"
